--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "localforage": "^1.10.0",
     "lucide-react": "^0.525.0",
