--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.7.0",
+    "socket.io-client": "^4.8.1",
     "sort-by": "^1.2.0",
     "tailwindcss": "^4.1.11"
   },
